--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -47,7 +47,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        tools:context=".presentation.ui.menu.MenuFragment">
+        tools:context=".presentation.ui.menu.fragments.MenuFragment">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
