--- a/app/src/main/res/layout/categories_item.xml
+++ b/app/src/main/res/layout/categories_item.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#FBFBFB">
 
     <com.google.android.material.chip.Chip
-        android:id="@+id/chipCategory"
+        android:id="@+id/chip_category"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
-        app:chipBackgroundColor="@color/white"
-        android:text="Пицца"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textColor="@color/button_gray_text"
         android:textSize="13sp"
+        app:chipBackgroundColor="@color/white"
         app:chipCornerRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Пицца" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
